Closed
Bug 1414628
Opened 8 years ago
Closed 8 years ago
PeerConnectionImpl.cpp: private field 'mHardwareH264Enabled' is not used
Categories
(Core :: WebRTC: Networking, defect, P3)
Core
WebRTC: Networking
Tracking
()
RESOLVED
FIXED
mozilla58
| Tracking | Status | |
|---|---|---|
| firefox58 | --- | fixed |
People
(Reporter: Sylvestre, Assigned: Sylvestre)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
In file included from /data/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/media/webrtc/signaling/src/peerconnection/Unified_cpp_src_peerconnection0.cpp:38:
/data/jenkins/workspace/firefox-clang-last/media/webrtc/signaling/src/peerconnection/PeerConnectionImpl.cpp:966:10: error: private field 'mHardwareH264Enabled' is not used [-Werror,-Wunused-private-field]
bool mHardwareH264Enabled;
^
Building with clang trunk and -Werror
| Comment hidden (mozreview-request) |
Updated•8 years ago
|
Rank: 25
Priority: -- → P3
Comment 2•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8925354 [details]
Bug 1414628 - ConfigureCodec: Remove private field 'mHardwareH264Enabled'
https://reviewboard.mozilla.org/r/196502/#review201864
lgtm
Attachment #8925354 -
Flags: review+
| Assignee | ||
Updated•8 years ago
|
Attachment #8925354 -
Flags: review?(rjesup)
Pushed by sledru@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/941d89fceb18
ConfigureCodec: Remove private field 'mHardwareH264Enabled' r=dminor
Comment 4•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
| Assignee | ||
Updated•7 years ago
|
Blocks: build-clang-trunk
| Assignee | ||
Updated•7 years ago
|
No longer blocks: clang-based-analysis
You need to log in
before you can comment on or make changes to this bug.
Description
•