Bug 1414628 - ConfigureCodec: Remove private field 'mHardwareH264Enabled' r=dminor

MozReview-Commit-ID: 83U02hqgW6d

--HG--
extra : rebase_source : 5baf00d2a8a3ad239981bb1774743980e3dbc0a6